[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dodosuko = { path = "../dodosuko" }
nabe_of_world = { path = "../nabe_of_world" }
monty_hall = { path = "../monty_hall" }
clap = { version = "3.2.16", features = ["derive", "env"] }